fix: widen app container to enable box-shadow overflows

--- a/client/src/App.module.scss
+++ b/client/src/App.module.scss
@@ -1,6 +1,6 @@
 .container {
   width: 90%;
-  max-width: 550px;
+  max-width: 590px;
   margin: auto;
   margin-top: 62px;
 }
